test/scc/pp/errors/039.a
039.t:1:8: error: no macro name given in #ifndef directive